src/it/univr/arnoldc/gen/ArnoldCParser.java
// Generated from ArnoldC.g4 by ANTLR 4.13.1
package it.univr.arnoldc.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ArnoldCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FUNCTIONCALL=1, PUTRESULT=2, FUNCTION=3, ENDFUNCTION=4, PARAMETER=5, WILLRETURN=6, 
		RETURN=7, BEGINMAIN=8, ENDMAIN=9, AT=10, TRUE=11, FALSE=12, PLUSOPERATOR=13, 
		MINUSOPERATOR=14, MULTIPLICATIONOPERATOR=15, DIVISIONOPERATOR=16, EQUALTO=17, 
		GREATERTHAN=18, OR=19, AND=20, PRINT=21, DECLAREINT=22, SETINITIALVALUE=23, 
		ASSIGNVARIABLE=24, SETVALUE=25, ENDASSIGNVARIABLE=26, IF=27, ELSE=28, 
		ENDIF=29, WHILE=30, ENDWHILE=31, READINT=32, IDENTIFIER=33, NUMBER=34, 
		STRING_LITERAL=35, WS=36;
	public static final int
		RULE_main = 0, RULE_function_declaration = 1, RULE_statement = 2, RULE_print_stmt = 3, 
		RULE_condition_stmt = 4, RULE_trueIf = 5, RULE_falseIf = 6, RULE_expression = 7, 
		RULE_operation = 8;
	private static String[] makeRuleNames() {
		return new String[] {
			"main", "function_declaration", "statement", "print_stmt", "condition_stmt", 
			"trueIf", "falseIf", "expression", "operation"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'DO IT NOW'", "'GET YOUR ASS TO MARS'", "'LISTEN TO ME VERY CAREFULLY'", 
			"'HASTA LA VISTA, BABY'", "'I NEED YOUR CLOTHES YOUR BOOTS AND YOUR MOTORCYCLE'", 
			"'GIVE THESE PEOPLE AIR'", "'I'LL BE BACK'", "'IT'S SHOWTIME'", "'YOU HAVE BEEN TERMINATED'", 
			"'@'", "'NO PROBLEMO'", "'I LIED'", "'GET UP'", "'GET DOWN'", "'YOU'RE FIRED'", 
			"'HE HAD TO SPLIT'", "'YOU ARE NOT YOU YOU ARE ME'", "'LET OFF SOME STEAM BENNET'", 
			"'CONSIDER THAT A DIVORCE'", "'KNOCK KNOCK'", "'TALK TO THE HAND'", "'HEY CHRISTMAS TREE'", 
			"'YOU SET US UP'", "'GET TO THE CHOPPER'", "'HERE IS MY INVITATION'", 
			"'ENOUGH TALK'", "'BECAUSE I'M GOING TO SAY PLEASE'", "'BULLSHIT'", "'YOU HAVE NO RESPECT FOR LOGIC'", 
			"'STICK AROUND'", "'CHILL'", "'I WANT TO ASK YOU A BUNCH OF QUESTIONS AND I WANT TO HAVE THEM ANSWERED IMMEDIATELY'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FUNCTIONCALL", "PUTRESULT", "FUNCTION", "ENDFUNCTION", "PARAMETER", 
			"WILLRETURN", "RETURN", "BEGINMAIN", "ENDMAIN", "AT", "TRUE", "FALSE", 
			"PLUSOPERATOR", "MINUSOPERATOR", "MULTIPLICATIONOPERATOR", "DIVISIONOPERATOR", 
			"EQUALTO", "GREATERTHAN", "OR", "AND", "PRINT", "DECLAREINT", "SETINITIALVALUE", 
			"ASSIGNVARIABLE", "SETVALUE", "ENDASSIGNVARIABLE", "IF", "ELSE", "ENDIF", 
			"WHILE", "ENDWHILE", "READINT", "IDENTIFIER", "NUMBER", "STRING_LITERAL", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ArnoldC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ArnoldCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public TerminalNode BEGINMAIN() { return getToken(ArnoldCParser.BEGINMAIN, 0); }
		public TerminalNode ENDMAIN() { return getToken(ArnoldCParser.ENDMAIN, 0); }
		public TerminalNode EOF() { return getToken(ArnoldCParser.EOF, 0); }
		public List<Function_declarationContext> function_declaration() {
			return getRuleContexts(Function_declarationContext.class);
		}
		public Function_declarationContext function_declaration(int i) {
			return getRuleContext(Function_declarationContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldCVisitor ) return ((ArnoldCVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(21);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCTION) {
				{
				{
				setState(18);
				function_declaration();
				}
				}
				setState(23);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(24);
			match(BEGINMAIN);
			setState(28);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1231028230L) != 0)) {
				{
				{
				setState(25);
				statement();
				}
				}
				setState(30);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(31);
			match(ENDMAIN);
			setState(32);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_declarationContext extends ParserRuleContext {
		public Function_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_declaration; }
	 
		public Function_declarationContext() { }
		public void copyFrom(Function_declarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VoidfunctionContext extends Function_declarationContext {
		public TerminalNode FUNCTION() { return getToken(ArnoldCParser.FUNCTION, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(ArnoldCParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ArnoldCParser.IDENTIFIER, i);
		}
		public TerminalNode ENDFUNCTION() { return getToken(ArnoldCParser.ENDFUNCTION, 0); }
		public List<TerminalNode> PARAMETER() { return getTokens(ArnoldCParser.PARAMETER); }
		public TerminalNode PARAMETER(int i) {
			return getToken(ArnoldCParser.PARAMETER, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public VoidfunctionContext(Function_declarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldCVisitor ) return ((ArnoldCVisitor<? extends T>)visitor).visitVoidfunction(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NonvoidfunctionContext extends Function_declarationContext {
		public TerminalNode FUNCTION() { return getToken(ArnoldCParser.FUNCTION, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(ArnoldCParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ArnoldCParser.IDENTIFIER, i);
		}
		public TerminalNode WILLRETURN() { return getToken(ArnoldCParser.WILLRETURN, 0); }
		public TerminalNode RETURN() { return getToken(ArnoldCParser.RETURN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ENDFUNCTION() { return getToken(ArnoldCParser.ENDFUNCTION, 0); }
		public List<TerminalNode> PARAMETER() { return getTokens(ArnoldCParser.PARAMETER); }
		public TerminalNode PARAMETER(int i) {
			return getToken(ArnoldCParser.PARAMETER, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public NonvoidfunctionContext(Function_declarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldCVisitor ) return ((ArnoldCVisitor<? extends T>)visitor).visitNonvoidfunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_declarationContext function_declaration() throws RecognitionException {
		Function_declarationContext _localctx = new Function_declarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_function_declaration);
		int _la;
		try {
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new VoidfunctionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(34);
				match(FUNCTION);
				setState(35);
				match(IDENTIFIER);
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==PARAMETER) {
					{
					{
					setState(36);
					match(PARAMETER);
					setState(37);
					match(IDENTIFIER);
					}
					}
					setState(42);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1231028230L) != 0)) {
					{
					{
					setState(43);
					statement();
					}
					}
					setState(48);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(49);
				match(ENDFUNCTION);
				}
				break;
			case 2:
				_localctx = new NonvoidfunctionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				match(FUNCTION);
				setState(51);
				match(IDENTIFIER);
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==PARAMETER) {
					{
					{
					setState(52);
					match(PARAMETER);
					setState(53);
					match(IDENTIFIER);
					}
					}
					setState(58);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(59);
				match(WILLRETURN);
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1231028230L) != 0)) {
					{
					{
					setState(60);
					statement();
					}
					}
					setState(65);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(66);
				match(RETURN);
				setState(67);
				expression();
				setState(68);
				match(ENDFUNCTION);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class WhilestmtContext extends StatementContext {
		public TerminalNode WHILE() { return getToken(ArnoldCParser.WHILE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ENDWHILE() { return getToken(ArnoldCParser.ENDWHILE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public WhilestmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldCVisitor ) return ((ArnoldCVisitor<? extends T>)visitor).visitWhilestmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AssignvariableContext extends StatementContext {
		public TerminalNode ASSIGNVARIABLE() { return getToken(ArnoldCParser.ASSIGNVARIABLE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ArnoldCParser.IDENTIFIER, 0); }
		public TerminalNode SETVALUE() { return getToken(ArnoldCParser.SETVALUE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ENDASSIGNVARIABLE() { return getToken(ArnoldCParser.ENDASSIGNVARIABLE, 0); }
		public List<OperationContext> operation() {
			return getRuleContexts(OperationContext.class);
		}
		public OperationContext operation(int i) {
			return getRuleContext(OperationContext.class,i);
		}
		public AssignvariableContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldCVisitor ) return ((ArnoldCVisitor<? extends T>)visitor).visitAssignvariable(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeclareintContext extends StatementContext {
		public TerminalNode DECLAREINT() { return getToken(ArnoldCParser.DECLAREINT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ArnoldCParser.IDENTIFIER, 0); }
		public TerminalNode SETINITIALVALUE() { return getToken(ArnoldCParser.SETINITIALVALUE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DeclareintContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldCVisitor ) return ((ArnoldCVisitor<? extends T>)visitor).visitDeclareint(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunctioncallContext extends StatementContext {
		public TerminalNode FUNCTIONCALL() { return getToken(ArnoldCParser.FUNCTIONCALL, 0); }
		public TerminalNode PUTRESULT() { return getToken(ArnoldCParser.PUTRESULT, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(ArnoldCParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ArnoldCParser.IDENTIFIER, i);
		}
		public FunctioncallContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldCVisitor ) return ((ArnoldCVisitor<? extends T>)visitor).visitFunctioncall(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrintstmtContext extends StatementContext {
		public Print_stmtContext print_stmt() {
			return getRuleContext(Print_stmtContext.class,0);
		}
		public PrintstmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldCVisitor ) return ((ArnoldCVisitor<? extends T>)visitor).visitPrintstmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ReadintContext extends StatementContext {
		public TerminalNode PUTRESULT() { return getToken(ArnoldCParser.PUTRESULT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ArnoldCParser.IDENTIFIER, 0); }
		public TerminalNode FUNCTIONCALL() { return getToken(ArnoldCParser.FUNCTIONCALL, 0); }
		public TerminalNode READINT() { return getToken(ArnoldCParser.READINT, 0); }
		public ReadintContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldCVisitor ) return ((ArnoldCVisitor<? extends T>)visitor).visitReadint(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ConditionstmtContext extends StatementContext {
		public Condition_stmtContext condition_stmt() {
			return getRuleContext(Condition_stmtContext.class,0);
		}
		public ConditionstmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldCVisitor ) return ((ArnoldCVisitor<? extends T>)visitor).visitConditionstmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		int _la;
		try {
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				_localctx = new DeclareintContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				match(DECLAREINT);
				setState(73);
				match(IDENTIFIER);
				setState(74);
				match(SETINITIALVALUE);
				setState(75);
				expression();
				}
				break;
			case 2:
				_localctx = new AssignvariableContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				match(ASSIGNVARIABLE);
				setState(77);
				match(IDENTIFIER);
				setState(78);
				match(SETVALUE);
				setState(79);
				expression();
				setState(81); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(80);
					operation();
					}
					}
					setState(83); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2088960L) != 0) );
				setState(85);
				match(ENDASSIGNVARIABLE);
				}
				break;
			case 3:
				_localctx = new PrintstmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				print_stmt();
				}
				break;
			case 4:
				_localctx = new ConditionstmtContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(88);
				condition_stmt();
				}
				break;
			case 5:
				_localctx = new WhilestmtContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(89);
				match(WHILE);
				setState(90);
				expression();
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1231028230L) != 0)) {
					{
					{
					setState(91);
					statement();
					}
					}
					setState(96);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(97);
				match(ENDWHILE);
				}
				break;
			case 6:
				_localctx = new ReadintContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(99);
				match(PUTRESULT);
				setState(100);
				match(IDENTIFIER);
				setState(101);
				match(FUNCTIONCALL);
				setState(102);
				match(READINT);
				}
				break;
			case 7:
				_localctx = new FunctioncallContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PUTRESULT) {
					{
					setState(103);
					match(PUTRESULT);
					setState(104);
					match(IDENTIFIER);
					}
				}

				setState(107);
				match(FUNCTIONCALL);
				setState(109); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(108);
					match(IDENTIFIER);
					}
					}
					setState(111); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==IDENTIFIER );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Print_stmtContext extends ParserRuleContext {
		public Print_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print_stmt; }
	 
		public Print_stmtContext() { }
		public void copyFrom(Print_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrintstringContext extends Print_stmtContext {
		public TerminalNode PRINT() { return getToken(ArnoldCParser.PRINT, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(ArnoldCParser.STRING_LITERAL, 0); }
		public PrintstringContext(Print_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldCVisitor ) return ((ArnoldCVisitor<? extends T>)visitor).visitPrintstring(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrintvariableContext extends Print_stmtContext {
		public TerminalNode PRINT() { return getToken(ArnoldCParser.PRINT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ArnoldCParser.IDENTIFIER, 0); }
		public PrintvariableContext(Print_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldCVisitor ) return ((ArnoldCVisitor<? extends T>)visitor).visitPrintvariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Print_stmtContext print_stmt() throws RecognitionException {
		Print_stmtContext _localctx = new Print_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_print_stmt);
		try {
			setState(119);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				_localctx = new PrintvariableContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				match(PRINT);
				setState(116);
				match(IDENTIFIER);
				}
				break;
			case 2:
				_localctx = new PrintstringContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				match(PRINT);
				setState(118);
				match(STRING_LITERAL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Condition_stmtContext extends ParserRuleContext {
		public Condition_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition_stmt; }
	 
		public Condition_stmtContext() { }
		public void copyFrom(Condition_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfendifContext extends Condition_stmtContext {
		public TerminalNode IF() { return getToken(ArnoldCParser.IF, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TrueIfContext trueIf() {
			return getRuleContext(TrueIfContext.class,0);
		}
		public TerminalNode ENDIF() { return getToken(ArnoldCParser.ENDIF, 0); }
		public IfendifContext(Condition_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldCVisitor ) return ((ArnoldCVisitor<? extends T>)visitor).visitIfendif(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfelseendifContext extends Condition_stmtContext {
		public TerminalNode IF() { return getToken(ArnoldCParser.IF, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TrueIfContext trueIf() {
			return getRuleContext(TrueIfContext.class,0);
		}
		public TerminalNode ELSE() { return getToken(ArnoldCParser.ELSE, 0); }
		public FalseIfContext falseIf() {
			return getRuleContext(FalseIfContext.class,0);
		}
		public TerminalNode ENDIF() { return getToken(ArnoldCParser.ENDIF, 0); }
		public IfelseendifContext(Condition_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldCVisitor ) return ((ArnoldCVisitor<? extends T>)visitor).visitIfelseendif(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Condition_stmtContext condition_stmt() throws RecognitionException {
		Condition_stmtContext _localctx = new Condition_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_condition_stmt);
		try {
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				_localctx = new IfelseendifContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				match(IF);
				setState(122);
				expression();
				setState(123);
				trueIf();
				setState(124);
				match(ELSE);
				setState(125);
				falseIf();
				setState(126);
				match(ENDIF);
				}
				break;
			case 2:
				_localctx = new IfendifContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				match(IF);
				setState(129);
				expression();
				setState(130);
				trueIf();
				setState(131);
				match(ENDIF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
